--- a/Dishes Classification.ipynb
+++ b/Dishes Classification.ipynb
@@ -264,13 +264,26 @@
   },
   "cells": [
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JHzrsOvLoUyq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ul9SqBB3cD62",
         "colab_type": "text"
       },
       "source": [
-        "**Developing an Image Classifier Application**\n",
+        "# **Developing an Image Classifier Application**\n",
         "\n",
         "In this project, we will train an image classifier to recognize different species of dishes. You can imagine using something like this in a phone app that tells you the name of the dish your camera is looking at. In practice you had train this classifier, then export it for use in your application. We will be using this dataset of 231 dish categories, you can see a few examples below.\n",
         "\n",
